--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@react-pdf/renderer": "^3.4.4",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-pdf": "^8.0.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0"
   },
